API - Ajout d'un requête pour obtenir la liste des series
